--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,29 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
+    <header>
+      <div class="top-bar">
+          <span>DECENT WORK FOR ALL, TAKE ACTION NOW</span>
+          <button class="donate-button" id="open-popup">DONATE NOW</button>
+      </div>
+      <nav>
+          <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About us</a></li>
+              <li><a href="career.html">Career</a></li>
+              <li><a href="contact.html">Contact us</a></li>
+          </ul>
+      </nav>
+  </header>
+  <div class="sub-menu">
+      <ul>
+          <li><a href="crisis.html">THE UNEMPLOYMENT CRISIS</a></li>
+          <li><a href="solution.html">OUR SOLUTIONS</a></li>
+          <li><a href="global.html">GLOBAL IMPACT</a></li>
+          <li><a href="story.html">Stories</a></li>
+          <button class="sign-up-button" onclick="document.location='register.html'">Sign up</button>
+      </ul>
+  </div>
     <section class="footer_get_touch_outer">
       <div class="container">
         <div class="footer_get_touch_inner grid-70-30">
@@ -43,4 +66,19 @@
         </div>
       </div>
     </section>
+    <footer>
+        <p>One of the world's highest-rated nonprofits #HelpThoseInNeed</p>
+        <p>&copy; 2024 Action Against unemployment worldwide</p>
+        <nav class="footer-nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="career.html">Careers</a></li>
+                <li><a href="story.html">Stories</a></li>
+                <li><a href="solution.html">Our Solutions</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+        </nav>
+        <p class="privacy-policy"><a href="#">Privacy Policy</a></p>
+    </footer>
   </body>
