--- a/solution.html
+++ b/solution.html
@@ -10,26 +10,26 @@
     <header>
         <div class="top-bar">
             <span>DECENT WORK FOR ALL, TAKE ACTION NOW</span>
-            <button class="donate-button">DONATE NOW</button>
+            <button class="donate-button" id="open-popup">DONATE NOW</button>
         </div>
         <nav>
             <ul>
-                <li><a href="#">About us</a></li>
-                <li><a href="#">Stories</a></li>
-                <li><a href="#">Media</a></li>
-                <li><a href="#">Contact us</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About us</a></li>
+                <li><a href="career.html">Career</a></li>
+                <li><a href="contact.html">Contact us</a></li>
             </ul>
         </nav>
     </header>
-        <div class="sub-menu">
-            <ul>
-                <li><a href="#">THE UNEMPLOYMENT CRISIS</a></li>
-                <li><a href="#">OUR SOLUTIONS</a></li>
-                <li><a href="#">GLOBAL IMPACT</a></li>
-                <li><a href="#">TAKE ACTION</a></li>
-                <button class="sign-up-button">Sign up</button>
-            </ul>
-        </div>
+    <div class="sub-menu">
+        <ul>
+            <li><a href="crisis.html">THE UNEMPLOYMENT CRISIS</a></li>
+            <li><a href="solution.html">OUR SOLUTIONS</a></li>
+            <li><a href="global.html">GLOBAL IMPACT</a></li>
+            <li><a href="story.html">Stories</a></li>
+            <button class="sign-up-button" onclick="document.location='register.html'">Sign up</button>
+        </ul>
+    </div>
     <main>
         <div class="main-content">
             <h1>Finding out the reasons</h1>
@@ -96,12 +96,12 @@
         <p>&copy; 2024 Action Against unemployment worldwide</p>
         <nav class="footer-nav">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Donate</a></li>
-                <li><a href="#">News</a></li>
-                <li><a href="#">How We Operate</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="career.html">Careers</a></li>
+                <li><a href="story.html">Stories</a></li>
+                <li><a href="solution.html">Our Solutions</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
         <p class="privacy-policy"><a href="#">Privacy Policy</a></p>
