--- a/about.html
+++ b/about.html
@@ -10,26 +10,26 @@
     <header>
         <div class="top-bar">
             <span>DECENT WORK FOR ALL, TAKE ACTION NOW</span>
-            <button class="donate-button">DONATE NOW</button>
+            <button class="donate-button" id="open-popup">DONATE NOW</button>
         </div>
         <nav>
             <ul>
-                <li><a href="#">About us</a></li>
-                <li><a href="#">Stories</a></li>
-                <li><a href="#">Media</a></li>
-                <li><a href="#">Contact us</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About us</a></li>
+                <li><a href="career.html">Career</a></li>
+                <li><a href="contact.html">Contact us</a></li>
             </ul>
         </nav>
     </header>
-        <div class="sub-menu">
-            <ul>
-                <li><a href="#">THE UNEMPLOYMENT CRISIS</a></li>
-                <li><a href="#">OUR SOLUTIONS</a></li>
-                <li><a href="#">GLOBAL IMPACT</a></li>
-                <li><a href="#">TAKE ACTION</a></li>
-                <button class="sign-up-button">Sign up</button>
-            </ul>
-        </div>
+    <div class="sub-menu">
+        <ul>
+            <li><a href="crisis.html">THE UNEMPLOYMENT CRISIS</a></li>
+            <li><a href="solution.html">OUR SOLUTIONS</a></li>
+            <li><a href="global.html">GLOBAL IMPACT</a></li>
+            <li><a href="story.html">Stories</a></li>
+            <button class="sign-up-button" onclick="document.location='register.html'">Sign up</button>
+        </ul>
+    </div>
     <div class ="about">
         <h1>About Us</h1>
             <div class ="row">
@@ -101,14 +101,14 @@
                         <img src="styles/images/picture4.jpg" alt="picture4">
                         <h3>THE UNEMPLOYMENT CRISIS</h3>
                         <p>Find out the impact of unemployment crisis.</p>
-                        <a href="#"><i style='font-size:24px' class='arrow'>&#8594;</i></a>
+                        <a href="crisis.html"><i style='font-size:24px' class='arrow'>&#8594;</i></a>
                     </div>
                 <div class="card">
                     <img src="styles/images/picture5.jpg" alt="picture5">
                     <div class="card-content">
                         <h3>OUR SOLUTIONS</h3>
                         <p>Any economic crisis is preventable and treatable.</p>
-                        <a href="#"><i style='font-size:24px' class='arrow'>&#8594;</i></a>
+                        <a href="solution.html"><i style='font-size:24px' class='arrow'>&#8594;</i></a>
                     </div>
                 </div>
                 <div class="card">
@@ -116,19 +116,34 @@
                     <div class="card-content">
                         <h3>GLOBAL IMPACT</h3>
                         <p>Understand the global impact to the economy.</p>
-                        <a href="#"><i style='font-size:24px' class='arrow'>&#8594;</i></a>
+                        <a href="global.html"><i style='font-size:24px' class='arrow'>&#8594;</i></a>
                     </div>
                 </div>
                 <div class="card">
                     <img src="styles/images/picture7.jpg" alt="picture7">
                     <div class="card-content">
-                        <h3>TAKE ACTION</h3>
+                        <h3>Stories</h3>
                         <p>Our action to fix the problems.</p>
-                        <a href="#"><i style='font-size:24px' class='arrow'>&#8594;</i></a>
+                        <a href="story.html"><i style='font-size:24px' class='arrow'>&#8594;</i></a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <footer>
+        <p>One of the world's highest-rated nonprofits #HelpThoseInNeed</p>
+        <p>&copy; 2024 Action Against unemployment worldwide</p>
+        <nav class="footer-nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="career.html">Careers</a></li>
+                <li><a href="story.html">Stories</a></li>
+                <li><a href="solution.html">Our Solutions</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+        </nav>
+        <p class="privacy-policy"><a href="#">Privacy Policy</a></p>
+    </footer>
 </body>
 </html>
