--- a/crisis.html
+++ b/crisis.html
@@ -6,6 +6,29 @@
     <link rel="stylesheet" href="styles/crisis.css">
 </head>
 <body>
+    <header>
+        <div class="top-bar">
+            <span>DECENT WORK FOR ALL, TAKE ACTION NOW</span>
+            <button class="donate-button" id="open-popup">DONATE NOW</button>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About us</a></li>
+                <li><a href="career.html">Career</a></li>
+                <li><a href="contact.html">Contact us</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="sub-menu">
+        <ul>
+            <li><a href="crisis.html">THE UNEMPLOYMENT CRISIS</a></li>
+            <li><a href="solution.html">OUR SOLUTIONS</a></li>
+            <li><a href="global.html">GLOBAL IMPACT</a></li>
+            <li><a href="story.html">Stories</a></li>
+            <button class="sign-up-button" onclick="document.location='register.html'">Sign up</button>
+        </ul>
+    </div>
 <div class="header"></div>
 <div class="content">
     <h1>UNEMPLOYMENT CRISIS</h1>
