--- a/global.html
+++ b/global.html
@@ -8,6 +8,29 @@
 
 </head>
 <body>
+    <header>
+        <div class="top-bar">
+            <span>DECENT WORK FOR ALL, TAKE ACTION NOW</span>
+            <button class="donate-button" id="open-popup">DONATE NOW</button>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About us</a></li>
+                <li><a href="career.html">Career</a></li>
+                <li><a href="contact.html">Contact us</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="sub-menu">
+        <ul>
+            <li><a href="crisis.html">THE UNEMPLOYMENT CRISIS</a></li>
+            <li><a href="solution.html">OUR SOLUTIONS</a></li>
+            <li><a href="global.html">GLOBAL IMPACT</a></li>
+            <li><a href="story.html">Stories</a></li>
+            <button class="sign-up-button" onclick="document.location='register.html'">Sign up</button>
+        </ul>
+    </div>
 <div class="header">GLOBAL IMPACT</div>
 <div class="content">
     <p>For the past 10 years Inclusive Growth Foundation<br>have been providing useful guidance and opportunity<br>for those who are passionate </p>
@@ -45,5 +68,20 @@
     </div>
 </div>
 </main>
+<footer>
+        <p>One of the world's highest-rated nonprofits #HelpThoseInNeed</p>
+        <p>&copy; 2024 Action Against unemployment worldwide</p>
+        <nav class="footer-nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="career.html">Careers</a></li>
+                <li><a href="story.html">Stories</a></li>
+                <li><a href="solution.html">Our Solutions</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+        </nav>
+        <p class="privacy-policy"><a href="#">Privacy Policy</a></p>
+    </footer>
 </body>
 </html>
