--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About us</a></li>
                 <li><a href="career.html">Career</a></li>
                 <li><a href="contact.html">Contact us</a></li>
