--- a/jobs.html
+++ b/jobs.html
@@ -6,6 +6,29 @@
     <link rel="stylesheet" href="styles/jobs.css">
 </head>
 <body>
+    <header>
+        <div class="top-bar">
+            <span>DECENT WORK FOR ALL, TAKE ACTION NOW</span>
+            <button class="donate-button" id="open-popup">DONATE NOW</button>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About us</a></li>
+                <li><a href="career.html">Career</a></li>
+                <li><a href="contact.html">Contact us</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="sub-menu">
+        <ul>
+            <li><a href="crisis.html">THE UNEMPLOYMENT CRISIS</a></li>
+            <li><a href="solution.html">OUR SOLUTIONS</a></li>
+            <li><a href="global.html">GLOBAL IMPACT</a></li>
+            <li><a href="story.html">Stories</a></li>
+            <button class="sign-up-button" onclick="document.location='register.html'">Sign up</button>
+        </ul>
+    </div>
 <div class="header"></div>
 <div class="content">
     <h1>Recruitments</h1>
@@ -142,6 +165,21 @@
         </tbody>
     </table>
 </div>
+<footer>
+        <p>One of the world's highest-rated nonprofits #HelpThoseInNeed</p>
+        <p>&copy; 2024 Action Against unemployment worldwide</p>
+        <nav class="footer-nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="career.html">Careers</a></li>
+                <li><a href="story.html">Stories</a></li>
+                <li><a href="solution.html">Our Solutions</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+        </nav>
+        <p class="privacy-policy"><a href="#">Privacy Policy</a></p>
+    </footer>
 
 </body>
 </html>
