--- a/story.html
+++ b/story.html
@@ -10,26 +10,26 @@
     <header>
         <div class="top-bar">
             <span>DECENT WORK FOR ALL, TAKE ACTION NOW</span>
-            <button class="donate-button">DONATE NOW</button>
+            <button class="donate-button" id="open-popup">DONATE NOW</button>
         </div>
         <nav>
             <ul>
-                <li><a href="#">About us</a></li>
-                <li><a href="#">Stories</a></li>
-                <li><a href="#">Media</a></li>
-                <li><a href="#">Contact us</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About us</a></li>
+                <li><a href="career.html">Career</a></li>
+                <li><a href="contact.html">Contact us</a></li>
             </ul>
         </nav>
     </header>
-        <div class="sub-menu">
-            <ul>
-                <li><a href="#">THE UNEMPLOYMENT CRISIS</a></li>
-                <li><a href="#">OUR SOLUTIONS</a></li>
-                <li><a href="#">GLOBAL IMPACT</a></li>
-                <li><a href="#">TAKE ACTION</a></li>
-                <button class="sign-up-button">Sign up</button>
-            </ul>
-        </div>
+    <div class="sub-menu">
+        <ul>
+            <li><a href="crisis.html">THE UNEMPLOYMENT CRISIS</a></li>
+            <li><a href="solution.html">OUR SOLUTIONS</a></li>
+            <li><a href="global.html">GLOBAL IMPACT</a></li>
+            <li><a href="story.html">Stories</a></li>
+            <button class="sign-up-button" onclick="document.location='register.html'">Sign up</button>
+        </ul>
+    </div>
     <main>
         <section class="news-stories">
             <div class="main-story">
