--- a/career.html
+++ b/career.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carrier Job Opportunities and Our Offices</title>
+    <title>Career</title>
     <link rel="stylesheet" href="styles/career.css">
+    <link rel="shortcut icon" type="image/x-icon" href="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/ngo-logo-template-design-34098a1068f08e5b70b1ccfef6efa203_screen.jpg?ts=1587841341" />
 </head>
 <body>
     <header>
@@ -33,7 +34,7 @@
 <div class="header">CAREERS</div>
 <div class="content">
     <p>You have talent and passion.<br>We have opportunities.</p>
-    <button onclick="document.location='work.html'"><span>Open Jobs</span> </button>
+    <button onclick="document.location='jobs.html'"><span>Open Jobs</span> </button>
 </div>
 <div class="section">
     <div class="container">
@@ -63,7 +64,6 @@
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
-        <p class="privacy-policy"><a href="#">Privacy Policy</a></p>
     </footer>
 </body>
 </html>
