--- a/crisis.html
+++ b/crisis.html
@@ -2,38 +2,39 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Crisis</title>
     <link rel="stylesheet" href="styles/crisis.css">
+    <link rel="shortcut icon" type="image/x-icon" href="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/ngo-logo-template-design-34098a1068f08e5b70b1ccfef6efa203_screen.jpg?ts=1587841341" />
 </head>
 <body>
-    <header>
-        <div class="top-bar">
-            <span>DECENT WORK FOR ALL, TAKE ACTION NOW</span>
-            <button class="donate-button" id="open-popup">DONATE NOW</button>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About us</a></li>
-                <li><a href="career.html">Career</a></li>
-                <li><a href="contact.html">Contact us</a></li>
-            </ul>
-        </nav>
-    </header>
-    <div class="sub-menu">
-        <ul>
-            <li><a href="crisis.html">THE UNEMPLOYMENT CRISIS</a></li>
-            <li><a href="solution.html">OUR SOLUTIONS</a></li>
-            <li><a href="global.html">GLOBAL IMPACT</a></li>
-            <li><a href="story.html">Stories</a></li>
-            <button class="sign-up-button" onclick="document.location='register.html'">Sign up</button>
-        </ul>
+<header>
+    <div class="top-bar">
+        <span>DECENT WORK FOR ALL, TAKE ACTION NOW</span>
+        <button class="donate-button" id="open-popup">DONATE NOW</button>
     </div>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About us</a></li>
+            <li><a href="career.html">Career</a></li>
+            <li><a href="contact.html">Contact us</a></li>
+        </ul>
+    </nav>
+</header>
+<div class="sub-menu">
+    <ul>
+        <li><a href="crisis.html">THE UNEMPLOYMENT CRISIS</a></li>
+        <li><a href="solution.html">OUR SOLUTIONS</a></li>
+        <li><a href="global.html">GLOBAL IMPACT</a></li>
+        <li><a href="story.html">Stories</a></li>
+        <button class="sign-up-button" onclick="document.location='register.html'">Sign up</button>
+    </ul>
+</div>
 <div class="header"></div>
 <div class="content">
     <h1>UNEMPLOYMENT CRISIS</h1>
     <h2>UNEMPLOYMENT</h2>
-  <p>many individuals were not blessed with decent education such as yourself.<br>Unable to find suitable jobs with their lacking in education, they were forced to sleep around the empty streets,<br> barely making a living.</p>
+    <p>Many individuals were not blessed with decent education such as yourself.<br>Unable to find suitable jobs with their lacking in education, they were forced to sleep around the empty streets,<br> barely making a living.</p>
     <p>If you have passion, we will provide the key to unlock your full potential.</p>
     <h3>In Inclusive Growth Foundation, we provide opportunity for those in need.</h3>
 
@@ -53,17 +54,14 @@
 
 </div>
 <div class ='video'>
-
     <iframe width="1000" height="500" src="https://www.youtube.com/embed/D4YQcCLSmn0?si=h7wx-UbNJc8mpE2b" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
 </div>
 <h1>Why does it matter to You?</h1>
 <p>As unemployment rate increase, unemployed workers lose their purchasing power,<br> which can lead to unemployment for other workers, creating a cascading effect that<br> ripples through the economy. In this way, unemployment even impacts those who are<br> still employed.</p>
 <div class="container">
     <div class="content2">
         <h1>Unemployment crisis 2024</h1>
-        <p>The unemployment rate in the World decreased by 0.2 percentage points (-3.8 percent) in 2023 in comparison to the previous year. This marks the lowest unemployment rate during the observed period.
-            The unemployment rate refers to the share of the workforce that is currently not working but is actively searching for work. It does not include the economically inactive population, such as the long-term unemployed, those aged under 15 years, or retired persons.</p>
+        <p>The unemployment rate in the World decreased by 0.2 percentage points (-3.8 percent) in 2023 in comparison to the previous year. This marks the lowest unemployment rate during the observed period. The unemployment rate refers to the share of the workforce that is currently not working but is actively searching for work. It does not include the economically inactive population, such as the long-term unemployed, those aged under 15 years, or retired persons.</p>
         <a href="story.html" class="btn">More</a>
     </div>
     <div class="image"></div>
@@ -72,5 +70,19 @@
         <p>People Unable to find a decent job</p>
     </div>
 </div>
+<footer>
+    <p>One of the world's highest-rated nonprofits #HelpThoseInNeed</p>
+    <p>&copy; 2024 Action Against Unemployment Worldwide</p>
+    <nav class="footer-nav">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="career.html">Careers</a></li>
+            <li><a href="story.html">Stories</a></li>
+            <li><a href="solution.html">Our Solutions</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+        </ul>
+    </nav>
+</footer>
 </body>
 </html>
