--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,700italic,400italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/donate.css">
+    <link rel="shortcut icon" type="image/x-icon" href="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/ngo-logo-template-design-34098a1068f08e5b70b1ccfef6efa203_screen.jpg?ts=1587841341" />
     <script src="scripts/script.js" defer></script>
 </head>
 <body>
@@ -82,7 +83,7 @@
         <div class="item item-2"><h5>Your donation will help save the children and their families.</h5></div>
         <div class="item item-3"><h2>TAKE ACTION</h2></div>
         <div class="item item-4"></div>
-        <div class="item item-5"><button class="donate-button-2">DONATE NOW</button></div>
+        <div class="item item-5"><button class="donate-button-2" id="open-popup">DONATE NOW</button></div>
     </div>
     <footer>
         <p>One of the world's highest-rated nonprofits #HelpThoseInNeed</p>
@@ -97,10 +98,8 @@
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
-        <p class="privacy-policy"><a href="#">Privacy Policy</a></p>
     </footer>
 
-    //popout
     <div id="popup" class="hidden">
         <div class="popup-overlay"></div>
         <div class="popup">
