--- a/jobs.html
+++ b/jobs.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Job Openings</title>
     <link rel="stylesheet" href="styles/jobs.css">
+    <link rel="shortcut icon" type="image/x-icon" href="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/ngo-logo-template-design-34098a1068f08e5b70b1ccfef6efa203_screen.jpg?ts=1587841341" />
 </head>
 <body>
     <header>
@@ -178,7 +179,6 @@
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
-        <p class="privacy-policy"><a href="#">Privacy Policy</a></p>
     </footer>
 
 </body>
