--- a/story.html
+++ b/story.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Decent Work for All</title>
+    <title>Story</title>
     <link rel="stylesheet" href="styles/story.css">
+    <link rel="shortcut icon" type="image/x-icon" href="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/ngo-logo-template-design-34098a1068f08e5b70b1ccfef6efa203_screen.jpg?ts=1587841341" />
 </head>
 <body>
     <header>
@@ -73,9 +74,6 @@
                 <li><a href="#">Contact Us</a></li>
             </ul>
         </nav>
-        <p class="privacy-policy"><a href="#">Privacy Policy</a></p>
     </footer>
 </body>
 </html>
-Story.html
-4 KB
