--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,13 @@
 <head>
     <meta charset="UTF-8" />
-    <title>Get In Touch Section</title>
+    <title>Contact us</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="styles/contact.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="shortcut icon" type="image/x-icon" href="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/ngo-logo-template-design-34098a1068f08e5b70b1ccfef6efa203_screen.jpg?ts=1587841341" />
   </head>
   <body>
     <header>
@@ -79,6 +80,5 @@
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
-        <p class="privacy-policy"><a href="#">Privacy Policy</a></p>
     </footer>
   </body>
