--- a/login.html
+++ b/login.html
@@ -4,8 +4,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Registration or Sign Up form in HTML CSS | CodingLab </title> 
+    <title>Login</title> 
     <link rel="stylesheet" href="styles/login.css">
+    <link rel="shortcut icon" type="image/x-icon" href="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/ngo-logo-template-design-34098a1068f08e5b70b1ccfef6efa203_screen.jpg?ts=1587841341" />
    </head>
 <body>
   <header>
@@ -31,6 +32,7 @@
         <button class="sign-up-button" onclick="document.location='register.html'">Sign up</button>
     </ul>
 </div>
+  <div class="body">
   <div class="wrapper">
     <h2>Login</h2>
     <form action="#">
@@ -40,10 +42,6 @@
       <div class="input-box">
         <input type="password" placeholder="Password" required>
       </div>
-      <!-- <div class="policy">
-        <input type="checkbox">
-        <h3>I accept all terms & condition</h3>
-      </div> -->
       <div class="input-box button">
         <input type="Submit" value="Login">
       </div>
@@ -52,6 +50,7 @@
       </div>
     </form>
   </div>
+</div>
   <footer>
         <p>One of the world's highest-rated nonprofits #HelpThoseInNeed</p>
         <p>&copy; 2024 Action Against unemployment worldwide</p>
@@ -65,7 +64,6 @@
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
-        <p class="privacy-policy"><a href="#">Privacy Policy</a></p>
     </footer>
 </body>
 </html>
