--- a/solution.html
+++ b/solution.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Decent Work for All</title>
+    <title>Solution</title>
     <link rel="stylesheet" href="styles/solution.css">
+    <link rel="shortcut icon" type="image/x-icon" href="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/ngo-logo-template-design-34098a1068f08e5b70b1ccfef6efa203_screen.jpg?ts=1587841341" />
 </head>
 <body>
     <header>
@@ -92,8 +93,8 @@
         </div>
     </main>
     <footer>
-        <p>One of the world's highest-rated nonprofits #HelpThoseInNeed</p>
-        <p>&copy; 2024 Action Against unemployment worldwide</p>
+        <p1>One of the world's highest-rated nonprofits #HelpThoseInNeed</p1><br>
+        <p1>&copy; 2024 Action Against unemployment worldwide</p1>
         <nav class="footer-nav">
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -104,6 +105,5 @@
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
-        <p class="privacy-policy"><a href="#">Privacy Policy</a></p>
     </footer>
 </body>
